test/error/iface/err1.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Err1
    input
      in    : Iface;

    implementation elementary

    function in.funcA()
    end

  end

